# wheelbot-unit5

./: .gitignore  AGENT.md  CLAUDE.md  CMakeLists.txt  README.md  prj.conf  zephyr-env.sh
boards/dji/robomaster_c/: Kconfig.defconfig  Kconfig.robomaster_c  board.cmake  board.yml  robomaster_c.dts  robomaster_c.yaml  robomaster_c_defconfig
docs/: 4310.md  4310说明书.md  STM32_C板用户手册.md  build-and-flash.md  serial_debug.md
scripts/: build.sh  check_devices.sh  debug_gdb.sh  flash_cmsis.sh  flash_stlink.sh  gdb_init.gdb  serial.sh
src/: dm4310_motor.c  dm4310_motor.h  kinematics_test.c  leg_control.c  leg_control.h  linkage_kinematics.c  linkage_kinematics.h  main.c  motor_debug.c  motor_debug.h  protocol_service.c  protocol_service.h  rm_imu.c  rm_imu.h  rm_m3508.c  rm_m3508.h  rm_sbus.c  rm_sbus.h  robot_ctrl.c  robot_ctrl.h  shell_commands.c
tools/: gdb_motor.py  monitor_angles.py  parse_memdump.py  plot_feedback.py  proto_test.py  read_feedback_ocd.py  read_motors.py  serial_bridge.py  sweep_x.py  sweep_y.py  twin_display.py
